@@ -419,7 +419,7 @@ void file_watch_event(int);
 
 void initialize_mt(void);
 
-static char *get_doing(dbref player, dbref enactor, bool full);
+static char *get_doing(dbref player, dbref caller, dbref enactor, NEW_PE_INFO *pe_info, bool full);
 
 #ifndef BOOLEXP_DEBUGGING
 #ifdef WIN32SERVICES
@@ -3596,7 +3596,7 @@ dump_users(DESC *call_by, char *match)
     sprintf(tbuf1, "%-16s %10s   %4s%c %s", Name(d->player),
             time_format_1(now - d->connected_at),
             time_format_2(now - d->last_time), (Dark(d->player) ? 'D' : ' ')
-            , get_doing(d->player, NOTHING, 0));
+            , get_doing(d->player, NOTHING, NOTHING, NULL, 0));
     queue_string_eol(call_by, tbuf1);
   }
   switch (count) {
@@ -3651,7 +3651,7 @@ do_who_mortal(dbref player, char *name)
                   time_format_1(now - d->connected_at),
                   time_format_2(now - d->last_time),
                   (Dark(d->player) ? 'D' : (Hidden(d) ? 'H' : ' '))
-                  , get_doing(d->player, player, 0));
+                  , get_doing(d->player, player, player, NULL, 0));
   }
   switch (count) {
   case 0:
@@ -4203,15 +4203,17 @@ do_doing(dbref player, const char *message)
 
 /** Return a player's \@doing.
  * \param player the dbref of the player whose \@doing we want
+ * \param caller
  * \param enactor the enactor
  * \param full Return the full doing, or limit to DOING_LEN chars for WHO?
  * \return a pointer to a STATIC buffer with the doing in.
  */
 static char *
-get_doing(dbref player, dbref enactor, bool full)
+get_doing(dbref player, dbref caller, dbref enactor, NEW_PE_INFO *pe_info, bool full)
 {
   static char doing[BUFFER_LEN];
   char *dp = doing;
+  ufun_attrib ufun;
 
   doing[0] = '\0';
 
@@ -4220,10 +4222,12 @@ get_doing(dbref player, dbref enactor, bool full)
     return "";
   }
 
-  if (!call_attrib(player, "DOING", dp, enactor, NULL, NULL)) {
-    /* No DOING attribute */
+  if (!fetch_ufun_attrib("DOING", player, &ufun, UFUN_LOCALIZE | UFUN_REQUIRE_ATTR | UFUN_IGNORE_PERMS))
+    return ""; /* No DOING attribute */
+
+  call_ufun(&ufun, doing, caller, enactor, pe_info, NULL);
+  if (!doing[0])
     return "";
-  }
 
   if (!full) {
     /* Truncate to display on WHO */
@@ -4804,7 +4808,7 @@ FUNCTION(fun_doing)
   /* Gets a player's @doing */
   DESC *d = lookup_desc(executor, args[0]);
   if (d)
-    safe_str(get_doing(d->player, executor, 0), buff, bp);
+    safe_str(get_doing(d->player, executor, enactor, pe_info, 0), buff, bp);
 }
 
 /* ARGSUSED */
